5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1330/executions/1716_2508.log
== TEST (2019-05-15 17:28:45) 
-- CODE:
x = int(input())
n = int(input())

v = 1
a = 2
b = 3
c = 4

while(v<n):
	pi = (4 / (a*b*c)) * (-1)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:29:25) 
-- CODE:

n = int(input())

v = 1
a = 2
b = 3
c = 4

while(v<n):
	pi = (4 / (a*b*c)) * (-1)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,10))
-- OUTPUT:
2.9944444444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:29:36) 
-- CODE:

n = int(input())

v = 1
a = 2
b = 3
c = 4

while(v<n):
	pi = (4 / (a*b*c)) * (-1)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,10))
-- EXECUTION TIME:
0.186295
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.9944444444
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
2.9999496627
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.9999209736
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:29:43) 
-- CODE:

n = int(input())

v = 1
a = 2
b = 3
c = 4

while(v<n):
	pi = (4 / (a*b*c)) * (-1)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,10))
-- OUTPUT:
2.9944444444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:31:35) 
-- CODE:

n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = (4 / (a*b*c)) + (-1)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,10))
-- OUTPUT:
2.0055555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:31:49) 
-- CODE:

n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = (4 / (a*b*c)) - (-1)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,10))
-- OUTPUT:
4.0055555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:32:04) 
-- CODE:

n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = (4 / (a*b*c)) - (-1)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,10))
-- OUTPUT:
4.0055555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:32:13) 
-- CODE:

n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = (4 / (a*b*c)) - (-1)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,10))
-- OUTPUT:
4.0055555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:32:19) 
-- CODE:

n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = (4 / (a*b*c)) - (-1)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,10))
-- OUTPUT:
4.0055555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:40:36) 
-- CODE:
n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = (4 / (a*b*c)) - (-1)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,10))
-- OUTPUT:
4.0055555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:03:59) 
-- CODE:
n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = (4 / (a*b*c)) - (-pi)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,10))
-- OUTPUT:
3.2174603175
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:04:12) 
-- CODE:
n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = (4 / (a*b*c)) - (-pi)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,10))
-- EXECUTION TIME:
0.211868
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.2174603175
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.2268948821
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.2267189964
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:04:13) 
-- CODE:
n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = (4 / (a*b*c)) - (-pi)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,10))
-- EXECUTION TIME:
0.139294
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.2174603175
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.2268948821
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.2267189964
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:04:31) 
-- CODE:
n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = (4 / (a*b*c)) - (-pi)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,8))
-- EXECUTION TIME:
0.147332
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.21746032
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.22689488
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.226719
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:04:34) 
-- CODE:
n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = (4 / (a*b*c)) - (-pi)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,8))
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:04:51) 
-- CODE:
n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = (4 / (a*b*c)) - (-pi)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,8))
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:05:04) 
-- CODE:
n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = (4 / (a*b*c)) - (-pi)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,8))
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:05:20) 
-- CODE:
n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = (4 / (a*b*c)) - (-pi)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,8))
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:05:53) 
-- CODE:
n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = (4 / (a*b*c)) + (-pi)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,8))
-- EXECUTION TIME:
0.149406
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.86031746
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.85844367
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:36:29) 
-- CODE:
n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = (4 / (a*b*c)) + (-pi)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,8))
-- OUTPUT:
2.86031746
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:36:53) 
-- CODE:
n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = (4 / (a*b*c)) + (-pi)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,8))
-- EXECUTION TIME:
0.139257
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.86031746
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.85844367
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:37:09) 
-- CODE:
n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = (4 / (a*b*c)) - (-pi)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,8))
-- EXECUTION TIME:
0.135832
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.21746032
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.22689488
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.226719
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:37:25) 
-- CODE:
n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = - (4 / (a*b*c)) + (-pi)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:37:52) 
-- CODE:
n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = - (4 / (a*b*c)) + (-pi)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,8))
-- EXECUTION TIME:
0.20207
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
2.85838393
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:38:06) 
-- CODE:
n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = - (4 / (a*b*c)) - (-pi)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,8))
-- OUTPUT:
2.78253968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:38:21) 
-- CODE:
n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = - (4 / (a*b*c)) - (-pi)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,8))
-- EXECUTION TIME:
0.145838
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.78253968
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
2.77310512
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.773281
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:38:37) 
-- CODE:
n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = - (4 / (a*b*c)) + (-pi)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 - pi
print(round(total,8))
-- EXECUTION TIME:
0.18463
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.86031746
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.85844367
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:38:44) 
-- CODE:
n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = - (4 / (a*b*c)) + (-pi)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,8))
-- EXECUTION TIME:
0.198036
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
2.85838393
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:38:59) 
-- CODE:
n = int(input())

v = 0
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi = - (4 / (a*b*c)) + (-pi)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,8))
-- EXECUTION TIME:
0.200824
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.85728716
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14157215
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.85837619
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 14:05:11) 
-- CODE:
from math import *

n = int(input())

v = 1
a = 2
b = 3
c = 4
pi = 0
while(v<n):
	pi =  (4 / (a*b*c)) + (-pi)
	a = a + 2
	b = b + 2
	c = c + 2
	v = v+1
	
total = 3 + pi
print(round(total,8))
-- EXECUTION TIME:
0.116284
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.86031746
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.85844367
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:46:50) 
-- CODE:
from math import *

n = int(input())

a = 3
v = 1

while(v<n):
	x = (2*v)*(2*v+2)*(2*v+2)
	a = a + (-1)**(v+1)*4/x
	v = v +1
	
print(round(total,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(total,8))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:47:00) 
-- CODE:
from math import *

n = int(input())

a = 3
v = 1

while(v<n):
	x = (2*v)*(2*v+2)*(2*v+2)
	a = a + (-1)**(v+1)*4/x
	v = v +1
	
print(round(x,8))
-- OUTPUT:
800
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:47:45) 
-- CODE:
from math import *

n = int(input())

a = 3
v = 1

while(v<n):
	x = (2*v)*(2*v+1)*(2*v+2)
	a = a + (-1)**(v+1)*4/x
	v = v +1
	
print(round(x,8))
-- OUTPUT:
720
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:49:11) 
-- CODE:


n = int(input())

a = 3
v = 1

while(v<n):
	x = (2*v)*(2*v+1)*(2*v+2)
	a = a + (-1)*(v+1)*4/x
	v = v +1
	
print(round(x,8))
-- OUTPUT:
720
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:17:19) 
-- CODE:
n = int(input())

soma = 3
i = 1

while(i<n):
	x = (2*i)*(2*i+1)*(2*i+2)
	soma = soma + (-1)**(i+1)*4/x
	i = i +1
	
print(round(x,8))
-- OUTPUT:
720
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
